--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# The vendor
+vendor
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -10,3 +13,10 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# Go coverage results
+coverage.txt
+profile.out
+
+# IDE
+.idea
