--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,14 @@ language: go
 sudo: false
 
 go:
+- 1.10.x
 - 1.11.x
-- tip
+- master
 
 matrix:
   fast_finish: true
   allow_failures:
-  - go: tip
+  - go: master
 
 before_install:
 - go get golang.org/x/lint/golint
