--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: go
 sudo: false
 
 go:
-- 1.10.x
-- 1.11.x
+- 1.12.x
 - master
 
 matrix:
@@ -12,11 +11,7 @@ matrix:
   - go: master
 
 before_install:
-- go get golang.org/x/lint/golint
-- go get honnef.co/go/tools/cmd/staticcheck
-- go get -u golang.org/x/tools/cmd/goimports
-- go get -u github.com/golang/dep/cmd/dep
-- make dep
+- make init dep
 
 script:
 - make verify
